Fix MBF spacing in results display.
Increase space between MBF attempt results in 'all-results' display,
to make delimitation between attempts clear.

--- a/WcaOnRails/app/webpacker/javascript/competition_results/index.scss
+++ b/WcaOnRails/app/webpacker/javascript/competition_results/index.scss
@@ -9,6 +9,9 @@
     .table-cell-solves {
       word-spacing: 0.5em;
     }
+    .table-cell-solves-mbf {
+      word-spacing: 2em;
+    }
     .WR {
       color : $wr-color;
     }
